[package]
name = "aura-toggle"
version = "0.1.0"
authors = ["Florian Beuscher <florianbeuscher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsvc", "winnt", "minwindef", "errhandlingapi", "winreg"] }